--- a/src/app/app-start/app-start.component.html
+++ b/src/app/app-start/app-start.component.html
@@ -1,5 +1,5 @@
-<div class="start-page h-100">
-  <div class="row image-shadow justify-content-center align-items-center">
+<div class="start-page vw-100 vh-100">
+  <div class="image-shadow row  vw-100 vh-100 m-0 justify-content-center align-items-center">
     <div routerLink="/game" id="play-button-container" class="btn-shadow">
       <div id="play-button-text"> PLAY</div>
       <div id="play-button-circle">
