--- a/src/app/game/game.component.css
+++ b/src/app/game/game.component.css
@@ -3,9 +3,14 @@
   padding-top: 70px;
 }
 
-#score-panel {
+/* #score-panel {
   background-color: rgba(44, 178, 188, 0.8);
+} */
+
+#score-panel {
+  background-color: var(--score-panel);
 }
+
 
 #dartboard-panel {
   background-color: rgb(214, 214, 214);
