--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,14 +1,29 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: rgb(36, 209, 163);">
-  <a routerLink="" class="navbar-brand pr-3 border-right">DARTS</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-content" aria-controls="navbar-content" aria-expanded="false" aria-label="Toggle navigation"></button>
-<div class="collapse navbar-collapse" id="navbar-content">
-<ul class="navbar-nav">
-  <li class="nav-item">
-    <a routerLink="/game" class="nav-link">Game</a>
-  </li>
-  <li class="nav-item">
-    <a routerLink="/informations" class="nav-link">Informations</a>
-  </li>
-</ul>
-</div>
+<nav
+  class="navbar fixed-top navbar-expand-lg navbar-dark"
+>
+  <a class="navbar-brand pr-3 border-right" routerLink="">DARTS</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    (click)="navCollapsed = !navCollapsed"
+  >
+    &#9776;
+  </button>
+  <div id="navbar-content" class="collapse navbar-collapse" [ngbCollapse]="navCollapsed">
+    <ul class="navbar-nav">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/game" (click)="navCollapsed = true">Game</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/informations" (click)="navCollapsed = true">Informations</a>
+      </li>
+    </ul>
+    <div class="btn-group" ngbDropdown role="group" aria-label="Button group with nested dropdown">
+      <button class="btn" tabindex="0" ngbDropdownToggle>Theme</button>
+      <div class="dropdown-menu" ngbDropdownMenu>
+        <button ngbDropdownItem (click)="onChangeTheme('is')">IS</button>
+        <button ngbDropdownItem (click)="onChangeTheme('dark')">Dark</button>
+      </div>
+    </div>
+  </div>
 </nav>
