--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,62 @@
-<nav
-  class="navbar fixed-top navbar-expand-lg navbar-dark"
->
-  <a class="navbar-brand pr-3 border-right" routerLink="">DARTS</a>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+  <div class="row px-3">
+    <div class="col p-0">
+      <a class="navbar-brand" routerLink="">DARTS</a>
+    </div>
+    <div class="col">
+      <div class="row h-100 justify-content-center align-items-center">
+    <svg
+    class="dart-arrow"
+  xmlns="http://www.w3.org/2000/svg"
+  xmlns:xlink="http://www.w3.org/1999/xlink"
+	viewBox="0 0 290.93 91.91"
+  version="1.1"
+  x="0px"
+  y="0px"
+  style="enable-background:new 0 0 290.93 91.91;"
+  xml:space="preserve">
+<g>
+	<g>
+    <path class="dart-arrow-spitz" d="M2.51,44.05c10.38-0.8,19.76-1.71,29.16-2.19c8.1-0.41,16.23-0.29,24.34-0.49c2.58-0.06,4.16,0.82,4.08,3.58
+			c-0.07,2.42-1.34,3.65-3.84,3.48c-17.31-1.13-34.62-2.25-51.93-3.39C4.04,45.01,3.76,44.73,2.51,44.05z"/>
+    <path class="dart-arrow-barrel" d="M58.54,52.91c4.7-6.2,4.73-9.41,0.34-16.02c4.18-1.07,8.01-2.18,11.92-2.97c0.75-0.15,2.21,0.72,2.57,1.48
+			c3.01,6.31,2.92,12.74-0.05,19.03c-0.4,0.84-2.05,1.78-2.9,1.6C66.6,55.26,62.87,54.09,58.54,52.91z"/>
+    <path class="dart-arrow-barrel" d="M74.56,56.92c4.74-7.94,4.82-15.58,0.19-23.58c2.91,0.03,5.69-0.28,8.33,0.21c1.41,0.27,3.14,1.66,3.73,2.99
+			c2.63,5.88,2.61,11.95-0.35,17.69c-0.68,1.32-2.74,2.39-4.33,2.67C79.75,57.33,77.23,56.96,74.56,56.92z"/>
+    <path class="dart-arrow-barrel" d="M87.02,57.04c4.54-7.93,4.77-15.54,0.12-23.57c3.03,0.01,5.9-0.24,8.67,0.15c1.19,0.17,2.66,1.46,3.2,2.62
+			c2.82,6.11,2.78,12.34-0.27,18.35c-0.57,1.12-2.14,2.26-3.38,2.42C92.69,57.36,89.94,57.07,87.02,57.04z"/>
+    <path class="dart-arrow-barrel" d="M99.52,57.1c4.46-9.48,4.48-15.62-0.05-23.5c3.16,0.01,6.13-0.36,8.91,0.18c1.34,0.26,2.82,2.04,3.42,3.47
+			c2.16,5.14,2.05,10.46,0.2,15.7c-1.06,2.99-2.88,4.84-6.46,4.27C103.63,56.91,101.63,57.12,99.52,57.1z"/>
+    <path class="dart-arrow-barrel" d="M111.93,33.67c1.87-0.01,3.36-0.03,4.84-0.02c5.88,0.05,7.25,1.17,8.46,6.99c0.23,1.09,0.43,2.22,0.4,3.33
+			c-0.47,13.74-2.85,14.31-13.84,12.97C116.39,49.36,116.46,41.72,111.93,33.67z"/>
+    <path class="dart-arrow-barrel" d="M123.88,57.29c5-8.08,4.87-15.66,0.37-23.54c2.87,0,5.61-0.21,8.29,0.09c1.13,0.13,2.61,1.07,3.14,2.06
+			c3.33,6.24,3.37,12.7,0.02,18.9c-0.69,1.28-2.83,2.2-4.44,2.48C129,57.68,126.61,57.33,123.88,57.29z"/>
+    <path class="dart-arrow-barrel" d="M139.47,55.71c0.06-6.75,0.13-13.31,0.19-20.26c4.66,0.94,10.5,1.55,15.9,3.43c3.14,1.09,3.17,5.1,2.75,8.22
+			c-0.35,2.65-0.75,5.48-4.38,6.04C148.8,53.92,143.71,54.94,139.47,55.71z"/>
+    <path class="dart-arrow-schaft" d="M158.95,38.92c14.38,0.1,28.44,0.14,42.51,0.35c3.91,0.06,6.59,3.13,6.5,6.78c-0.09,3.61-2.89,6.51-6.83,6.51
+			c-13.94,0-27.88-0.16-42.25-0.27C161.5,47.8,161.51,43.47,158.95,38.92z"/>
+		<path class="dart-arrow-flight-top" d="M200.69,36.63c7.96-7.71,16.11-15.6,24.27-23.49c1.8-1.74,3.62-3.44,5.43-5.16c5.03-4.77,11.01-6.7,17.86-5.9
+			c4.34,0.51,8.68,1.03,12.98,1.77c7.52,1.28,13.32,5.29,16.33,12.31c3.63,8.47,6.65,17.2,10.1,26.26
+			c-1.76,0.05-3.17,0.14-4.58,0.13c-23.6-0.29-47.19-0.55-70.79-0.97c-1.65-0.03-3.3-1.13-4.91-1.84
+			C205.18,38.78,203.01,37.71,200.69,36.63z"/>
+    <path class="dart-arrow-flight-mid" d="M208.46,51.75c0.94-2.89,2.06-4.17,4.92-4.12c23.08,0.41,46.17,0.63,69.26,0.92c0.71,0.01,1.43,0.12,2.59,0.22
+			c-6.34,8.91-12.69,16.28-24.62,17.07c-8.71,0.58-16.91,0.05-24.94-3.1C226.62,59.2,217.65,55.47,208.46,51.75z"/>
+		<path class="dart-arrow-flight-bottom" d="M282.82,61.9c-1.99,4.72-3.97,10.24-6.59,15.44c-3.11,6.17-8.48,9.75-15.28,10.85c-4.8,0.77-9.65,1.23-14.5,1.63
+			c-6.59,0.55-12.36-1.55-17.03-6.19c-9.2-9.15-18.26-18.43-27.37-27.66c-0.24-0.24-0.38-0.56-0.29-1.64
+			c1.64,0.52,3.33,0.93,4.92,1.59c10.01,4.15,20,8.35,30,12.53c10.63,4.44,21.65,3.81,32.36,1.16
+			C274.07,68.36,278.44,64.44,282.82,61.9z"/>
+	</g>
+</g>
+</svg>
+</div>
+</div>
+  </div>
   <button
     class="navbar-toggler"
     type="button"
     (click)="navCollapsed = !navCollapsed"
   >
-    &#9776;
+  <span class="navbar-toggler-icon"></span>
   </button>
   <div id="navbar-content" class="collapse navbar-collapse" [ngbCollapse]="navCollapsed">
     <ul class="navbar-nav">
@@ -18,11 +67,15 @@
         <a class="nav-link" routerLink="/informations" (click)="navCollapsed = true">Informations</a>
       </li>
     </ul>
-    <div class="btn-group" ngbDropdown role="group" aria-label="Button group with nested dropdown">
+    <div id="nav-dropdown" class="btn-group ml-auto" ngbDropdown display="dynamic" role="group">
       <button class="btn" tabindex="0" ngbDropdownToggle>Theme</button>
-      <div class="dropdown-menu" ngbDropdownMenu>
-        <button ngbDropdownItem (click)="onChangeTheme('is')">IS</button>
-        <button ngbDropdownItem (click)="onChangeTheme('dark')">Dark</button>
+      <div class="dropdown-menu px-2" ngbDropdownMenu>
+        <button class="theme-button row m-auto w-100">
+          <div class="col-6">IS</div>
+          <div class="col-6">s</div>
+        </button>
+        <a ngbDropdownItem (click)="changeTheme('is')">IS</a>
+        <a ngbDropdownItem (click)="changeTheme('dark')">Dark</a>
       </div>
     </div>
   </div>
